# chc

./: cabal.project  default.nix  hie.yaml
chc-core/: chc-core.cabal  default.nix
chc-core/src/CHC/: Core.hs
chc-core/src/CHC/Core/: Abstraction.hs  Substitutive.hs  Syntax.hs
