cabal-version:      3.0
name:               chc-core
version:            0.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
-- author:
maintainer:         exclusiveandgate@gmail.com
-- copyright:
category:           Development
build-type:         Simple
-- extra-source-files:

common common-options
    ghc-options: -Wall
    
    default-extensions:
        LambdaCase
        NoStarIsType
        PatternSynonyms

library
    import:           common-options
    exposed-modules: 
        CHC.Core
        CHC.Core.Abstraction
        CHC.Core.Substitutive
        CHC.Core.Syntax

    -- other-modules:
    -- other-extensions:
    build-depends:
        base            ^>= 4.17.0.0,
        transformers    ^>= 0.5.6.2

    hs-source-dirs:   src
    default-language: Haskell2010
